// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfusionMatrix does not break on asymetric data 1`] = `
<DocumentFragment>
  <div
    class="flex root"
  >
    <table>
      <tbody>
        <tr>
          <td
            class="yAxisLabel"
          >
            test y axis
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="ylabel"
            >
              label2
            </div>
          </td>
          <td
            class="cell"
            style="background-color: rgba(41, 121, 255, 0.5); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay"
              style="opacity: 0;"
            />
            4
          </td>
          <td
            class="cell"
            style="background-color: rgba(41, 121, 255, 0.875); color: rgb(255, 255, 255);"
          >
            <div
              class="overlay"
              style="opacity: 0;"
            />
            7
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="ylabel"
            >
              label1
            </div>
          </td>
          <td
            class="cell"
            style="background-color: rgba(41, 121, 255, 0.375); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay"
              style="opacity: 0;"
            />
            3
          </td>
          <td
            class="cell"
            style="background-color: rgba(41, 121, 255, 0.75); color: rgb(255, 255, 255);"
          >
            <div
              class="overlay"
              style="opacity: 0;"
            />
            6
          </td>
        </tr>
        <tr>
          <td
            class="xlabel"
          />
          <th>
            <div
              class="xlabel"
            >
              label1
            </div>
          </th>
          <th>
            <div
              class="xlabel"
            >
              label2
            </div>
          </th>
          <td
            class="xAxisLabel"
          >
            test x axis
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="legend"
      style="height: 118.5px;"
    >
      <div
        class="legendNotch"
        style="top: 0px;"
      >
        <span
          class="legendLabel"
        >
          8
        </span>
      </div>
      <div
        class="legendNotch"
        style="top: 100%;"
      >
        <span
          class="legendLabel"
        >
          0
        </span>
      </div>
      <div
        class="legendNotch"
        style="top: 80%;"
      >
        <span
          class="legendLabel"
        >
          1
        </span>
      </div>
      <div
        class="legendNotch"
        style="top: 60%;"
      >
        <span
          class="legendLabel"
        >
          3
        </span>
      </div>
      <div
        class="legendNotch"
        style="top: 40%;"
      >
        <span
          class="legendLabel"
        >
          4
        </span>
      </div>
      <div
        class="legendNotch"
        style="top: 20%;"
      >
        <span
          class="legendLabel"
        >
          6
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConfusionMatrix does not break on empty data 1`] = `<DocumentFragment />`;

exports[`ConfusionMatrix renders a basic confusion matrix 1`] = `
<DocumentFragment>
  <div
    class="flex root"
  >
    <table>
      <tbody>
        <tr>
          <td
            class="yAxisLabel"
          >
            test y axis
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="ylabel"
            >
              label2
            </div>
          </td>
          <td
            class="cell"
            style="background-color: rgba(41, 121, 255, 0.125); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay"
              style="opacity: 0;"
            />
            1
          </td>
          <td
            class="cell"
            style="background-color: rgba(41, 121, 255, 0.5); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay"
              style="opacity: 0;"
            />
            4
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="ylabel"
            >
              label1
            </div>
          </td>
          <td
            class="cell"
            style="background-color: rgba(41, 121, 255, 0); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay"
              style="opacity: 0;"
            />
            0
          </td>
          <td
            class="cell"
            style="background-color: rgba(41, 121, 255, 0.375); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay"
              style="opacity: 0;"
            />
            3
          </td>
        </tr>
        <tr>
          <td
            class="xlabel"
          />
          <th>
            <div
              class="xlabel"
            >
              label1
            </div>
          </th>
          <th>
            <div
              class="xlabel"
            >
              label2
            </div>
          </th>
          <td
            class="xAxisLabel"
          >
            test x axis
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="legend"
      style="height: 177.75px;"
    >
      <div
        class="legendNotch"
        style="top: 0px;"
      >
        <span
          class="legendLabel"
        >
          8
        </span>
      </div>
      <div
        class="legendNotch"
        style="top: 100%;"
      >
        <span
          class="legendLabel"
        >
          0
        </span>
      </div>
      <div
        class="legendNotch"
        style="top: 80%;"
      >
        <span
          class="legendLabel"
        >
          1
        </span>
      </div>
      <div
        class="legendNotch"
        style="top: 60%;"
      >
        <span
          class="legendLabel"
        >
          3
        </span>
      </div>
      <div
        class="legendNotch"
        style="top: 40%;"
      >
        <span
          class="legendLabel"
        >
          4
        </span>
      </div>
      <div
        class="legendNotch"
        style="top: 20%;"
      >
        <span
          class="legendLabel"
        >
          6
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConfusionMatrix renders a small confusion matrix snapshot, with no labels or footer 1`] = `
<DocumentFragment>
  <div
    class="flex root"
  >
    <table>
      <tbody>
        <tr>
          <td
            class="cell"
            style="background-color: rgba(41, 121, 255, 0.125); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay"
              style="opacity: 0;"
            />
            1
          </td>
          <td
            class="cell"
            style="background-color: rgba(41, 121, 255, 0.5); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay"
              style="opacity: 0;"
            />
            4
          </td>
        </tr>
        <tr>
          <td
            class="cell"
            style="background-color: rgba(41, 121, 255, 0); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay"
              style="opacity: 0;"
            />
            0
          </td>
          <td
            class="cell"
            style="background-color: rgba(41, 121, 255, 0.375); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay"
              style="opacity: 0;"
            />
            3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`ConfusionMatrix renders only one of the given list of configs 1`] = `
<DocumentFragment>
  <div
    class="flex root"
  >
    <table>
      <tbody>
        <tr>
          <td
            class="yAxisLabel"
          >
            test y axis
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="ylabel"
            >
              label2
            </div>
          </td>
          <td
            class="cell"
            style="background-color: rgba(41, 121, 255, 0.125); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay"
              style="opacity: 0;"
            />
            1
          </td>
          <td
            class="cell"
            style="background-color: rgba(41, 121, 255, 0.5); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay"
              style="opacity: 0;"
            />
            4
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="ylabel"
            >
              label1
            </div>
          </td>
          <td
            class="cell"
            style="background-color: rgba(41, 121, 255, 0); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay"
              style="opacity: 0;"
            />
            0
          </td>
          <td
            class="cell"
            style="background-color: rgba(41, 121, 255, 0.375); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay"
              style="opacity: 0;"
            />
            3
          </td>
        </tr>
        <tr>
          <td
            class="xlabel"
          />
          <th>
            <div
              class="xlabel"
            >
              label1
            </div>
          </th>
          <th>
            <div
              class="xlabel"
            >
              label2
            </div>
          </th>
          <td
            class="xAxisLabel"
          >
            test x axis
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="legend"
      style="height: 177.75px;"
    >
      <div
        class="legendNotch"
        style="top: 0px;"
      >
        <span
          class="legendLabel"
        >
          8
        </span>
      </div>
      <div
        class="legendNotch"
        style="top: 100%;"
      >
        <span
          class="legendLabel"
        >
          0
        </span>
      </div>
      <div
        class="legendNotch"
        style="top: 80%;"
      >
        <span
          class="legendLabel"
        >
          1
        </span>
      </div>
      <div
        class="legendNotch"
        style="top: 60%;"
      >
        <span
          class="legendLabel"
        >
          3
        </span>
      </div>
      <div
        class="legendNotch"
        style="top: 40%;"
      >
        <span
          class="legendLabel"
        >
          4
        </span>
      </div>
      <div
        class="legendNotch"
        style="top: 20%;"
      >
        <span
          class="legendLabel"
        >
          6
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
